dev_ws/log/build_2020-11-18_15-34-05/tallest_buildings/stderr.log
  File "H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_buildings\client.py", line 40
    break
    ^
SyntaxError: invalid syntax

  File "H:\MyProgram\C and C++\ROS\dev_ws\install\Lib\site-packages\tallest_buildings\service.py", line 15
    1 = 'name = Burj Khalifa, country = United Arab Emirates, height = 829.8',
    ^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?

